package td1.refactor.api.general;

public interface FoodConstituent {
    public double calories_per_100g();
}
