package td1.refactor.api.macdeau;

import td1.refactor.api.general.FoodProduct;

import java.util.List;

public class MacDeauBurger {
    public MacDeauBurger(String name, List<FoodProduct> items) {
    }
}
